# libphysica

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
.github/workflows/: main.yml
include/: Linear_Algebra.hpp  Natural_Units.hpp  Numerics.hpp  Statistics.hpp  Utilities.hpp  version.hpp.in
include/libphysica/: Integration.hpp  Linear_Algebra.hpp  List_Manipulations.hpp  Natural_Units.hpp  Numerics.hpp  Special_Functions.hpp  Statistics.hpp  Utilities.hpp
src/: CMakeLists.txt  Integration.cpp  Linear_Algebra.cpp  Natural_Units.cpp  Numerics.cpp  Special_Functions.cpp  Statistics.cpp  Utilities.cpp  main.cpp
tests/: CMakeLists.txt  main.cpp  test_Integration.cpp  test_Linear_Algebra.cpp  test_List_Manipulations.cpp  test_Natural_Units.cpp  test_Numerics.cpp  test_Special_Functions.cpp  test_Statistics.cpp  test_Utilities.cpp  test_module.cpp
